docker/vote-envoy.yaml
static_resources:
  listeners:
    - name: vote_api_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 3000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: vote_api
                route_config:
                  name: vote_api_route
                  virtual_hosts:
                    - name: vote_api
                      domains: ['*']
                      routes:
                        - match: { prefix: '/' }
                          route: { cluster: vote_api }
                http_filters:
                  - name: envoy.filters.http.lua
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      clear_route_cache: false
                      inline_code: |
                        function envoy_on_request(handle)
                          handle:headers():remove("x-vote-authz-assertion")
                        end
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      failure_mode_allow: false
                      allowed_headers:
                        patterns:
                          - exact: authorization
                      http_service:
                        server_uri:
                          uri: http://host.docker.internal:3005
                          cluster: vote_authz
                          timeout: 3s
                        authorization_response:
                          allowed_upstream_headers:
                            patterns:
                              - exact: x-vote-authz-assertion
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: vote_api
      connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: vote_api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: host.docker.internal, port_value: 3004 }
    - name: vote_authz
      connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: vote_authz
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: host.docker.internal, port_value: 3005 }
